# coresi

./: .editorconfig  .gitignore  Makefile  README.md  conda-env.yaml  config.yaml  constants.yaml  display_sim_PMB.py  image_vis.ipynb  pyproject.toml
LICENSES/: MIT.txt
batch_scripts/creatis_cluster/: README.md  coresi-cpu.pbs  coresi.pbs  coresi.pbs.license
batch_scripts/jean_zay/: README.md  config.templated.yaml  coresi-sens.sh  coresi.sh
coresi/: camera.py  data.py  display_image.py  event.py  image.py  interpolation.py  main.py  mlem.py  point.py  sensitivity.py  simulation.py  single_layer_camera.py  system_matrix_model.py  tv.py  utils.py
misc/: README.md  phantom.py
paper_images/: 1d_slice.py  display_sim_PMB.py
pbs_jobs/: coresi-sens.sh  coresi.pbs  coresi.sh  coresi_tests.pbs
presentation/: plot_timings.py  timings.json
src/: camera.py  data.py  display_image.py  event.py  gpuoptional.py  image.py  main.py  mlem.py  point.py  sensitivity.py
tests/: CORESI  ConfigIECPhantom_CylinderSources_SingleE.m  __init__.py  test_all_configs.py  test_config.yaml  test_config_mlem.yaml  test_load_data.py  test_local_coords.py  test_mlem.npy  test_mlem.py  test_mlem_mono.npy  test_mlem_spectral.npy  test_mlem_spectral.npy.license  test_point.py
tests/config_all/: config_1.m  config_2.m  config_3.m  config_4.m  config_5.m  config_6.m  config_7.m  configs.yaml
